force-app/main/default/objects/IndividualTarget__c/fields/EmployeeID__c.field-meta.xml
<CustomField>
    <fullName>EmployeeID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EMPLOYEE ID</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>INDIVIDUAL TARGET</relationshipLabel>
    <relationshipName>IndividualTarget</relationshipName>
    <type>Lookup</type>
</CustomField>