force-app/main/default/objects/IndividualTarget__c/fields/FullName__c.field-meta.xml
<CustomField>
    <fullName>FullName__c</fullName>
    <formula>EmployeeID__r.Full_Name__c</formula>
    <label>FULL NAME</label>
    <type>Text</type>
</CustomField>