force-app/main/default/objects/IndividualTarget__c/fields/IndividualTargetName__c.field-meta.xml
<CustomField>
    <fullName>IndividualTargetName__c</fullName>
    <label>INDIVIDUAL TARGET NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>