force-app/main/default/objects/IndividualTarget__c/fields/OrganizationAnnualTarget__c.field-meta.xml
<CustomField>
    <fullName>OrganizationAnnualTarget__c</fullName>
    <formula>OrganizationTargetID__r.AnnaulTarget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ORGANIZATION ANNUAL TARGET</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>