force-app/main/default/objects/IndividualTarget__c/fields/OrganizationTargetID__c.field-meta.xml
<CustomField>
    <fullName>OrganizationTargetID__c</fullName>
    <label>ORGANIZATION TARGET ID</label>
    <referenceTo>OrganizationTarget__c</referenceTo>
    <relationshipLabel>INDIVIDUAL TARGET</relationshipLabel>
    <relationshipName>IndividualTarget</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>