force-app/main/default/objects/IndividualTarget__c/recordTypes/IndividualTarget.recordType-meta.xml
<RecordType>
    <fullName>IndividualTarget</fullName>
    <active>true</active>
    <label>INDIVIDUAL TARGET</label>
</RecordType>